--- a/style.css
+++ b/style.css
@@ -105,3 +105,52 @@ body {
 
 /* ---------------------- Recetas ------------------------ */
 
+.pizzaheader {
+    display: flex;
+    /* border: 2px solid; */
+    width: 100%;
+    color: blanchedalmond;
+    background-color: rgba(31, 73, 31, 0.733);
+    font-size: 34px;
+    padding: 1rem;
+    box-shadow: 0px 5px 5px rgba(48, 70, 41, 0.486);
+    flex-wrap: wrap;
+}
+
+.title {
+    display: flex;
+    /* border: 2px solid; */
+    justify-content: center;
+    align-items: center;
+    flex: auto;
+}
+
+.hometop {
+    display: flex;
+    /* border: 3px solid red; */
+    max-width: 3rem;
+    min-width: 3rem;
+    /* justify-content: center; */
+    align-items: center;
+}
+
+.fa-home {
+    display: flex;
+    color: blanchedalmond;
+    font-size: 24px;
+    /* width: 40px;
+    height: 40px; */
+    /* border: 2px solid; */
+    /* border-radius: 50%; */
+}
+
+#button {
+    /* display: flex; */
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    border: 1px solid rgb(31, 73, 31, 0);
+    background-color: rgb(31, 73, 31, 0);
+    box-shadow: 0px 0px 8px rgb(29, 43, 25);
+
+}
